# TVSD

./: README.md  TVSD.py  __init__.py  requirements.txt  setup.cfg
src/TVSD/: TVSD.py  __init__.py
tests/: testing_lazy_mapping.ipynb
