[metadata]
# replace with your username:
name = TVSD
version = 0.0.1
author = Yaroslav Zharov
author_email = mart.slaaf@gmail.com
description = Torch Volume Slicing Dataset. Generating 2D slices from 3D volumes on the fly.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MartSlaaf/TVSD
project_urls =
    Bug Tracker = https://github.com/MartSlaaf/TVSD/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    torch
    medpy
    scikit-image
    albumentations
    tifffile 
    numpy

[options.packages.find]
where = src